<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="ScrollViewSize">

        <LinearLayout
            android:orientation="vertical"
            android:padding="@dimen/small_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/large_margin">

            <TextView
                android:layout_marginTop="@dimen/large_margin"
                android:textColor="?android:attr/textColorPrimary"
                android:textStyle="bold"
                android:textSize="@dimen/huge_font_size"
                android:text="@string/placeholder_login"
                android:layout_marginBottom="@dimen/extra_big_margin"
                android:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                app:errorEnabled="true"
                android:id="@+id/email_input"
                app:boxBackgroundColor="@android:color/transparent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:id="@+id/email_edit_text"
                    android:hint="@string/hint_login_name"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:id="@+id/password_input"
                app:passwordToggleEnabled="true"
                app:errorEnabled="true"
                app:boxBackgroundColor="@android:color/transparent"
                android:layout_height="wrap_content">
                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:id="@+id/password_edit_text"
                    android:hint="@string/hint_login_password_edit_text"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:id="@+id/login_button"
                android:text="@string/button_text_login"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginTop="@dimen/big_margin">

            <com.google.android.gms.common.SignInButton
                android:id="@+id/sign_in_button_google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/extra_big_margin_plus" />

            <com.facebook.login.widget.LoginButton
                android:id="@+id/sign_in_button_facebook"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/extra_big_margin_plus"
                android:text="@string/log_in"
                android:layout_marginTop="@dimen/medium_margin" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>