<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".presentation.profile.ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginStart="@dimen/medium_margin"
            android:textSize="@dimen/not_so_huge_font_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/placeholder_profile"
            android:layout_marginLeft="@dimen/medium_margin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageview_detail_user"
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="2"
                android:src="@drawable/placeholder_avatar"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:text="@string/placeholder_name"
                        android:layout_marginLeft="@dimen/small_margin" />

                    <TextView
                        android:id="@+id/textview_profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:text="@string/placeholder_arief"
                        android:layout_marginLeft="@dimen/small_margin" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:text="@string/placeholder_birth_of_date"
                        android:layout_marginLeft="@dimen/small_margin" />

                    <TextView
                        android:id="@+id/textview_profile_birth"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:text="@string/placeholder_arief"
                        android:layout_marginLeft="@dimen/small_margin" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/small_margin"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:text="@string/placeholder_email"
                        android:layout_marginLeft="@dimen/small_margin" />

                    <TextView
                        android:id="@+id/textview_profile_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/small_margin"
                        android:text="@string/placeholder_arief"
                        android:layout_marginLeft="@dimen/small_margin" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>