<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".presentation.artisan.ArtisanFragment">

    <LinearLayout
        android:id="@+id/linearlayout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorAccent"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginLeft="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            android:text="@string/placeholder_artisan_menu"
            android:textSize="@dimen/not_so_huger_font_size"
            android:textStyle="bold"
             />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="@dimen/medium_margin"
            android:layout_marginBottom="@dimen/medium_margin"
            app:cardCornerRadius="@dimen/cardview_default_radius">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginHorizontal="10dp"
                android:gravity="center_vertical">

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_search"/>

                <EditText
                    android:id="@+id/edit_text_search"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="8"
                    android:hint="@string/placeholder_search"
                    android:background="@null" />

                <ImageView
                    android:id="@+id/imageview_clear_search"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:visibility="gone"
                    android:src="@drawable/ic_cancel"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:textSize="@dimen/not_so_huge_font_size"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/placeholder_list_of_artisan"
        android:layout_marginLeft="@dimen/small_margin" />

    <com.example.beautybell.presentation.common.view.Shimmer
        android:id="@+id/shimmer_loading_artisans"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout="@layout/shimmer_loading_item" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_artisan"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/small_margin" />

</LinearLayout>