<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.example.beautybell.presentation.common.view.Shimmer
        android:id="@+id/shimmer_loading_detail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        app:layout="@layout/shimmer_loading_item" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginStart="@dimen/medium_margin"
            android:textSize="@dimen/not_so_huge_font_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/placeholder_detail_artisan"
            android:layout_marginLeft="@dimen/medium_margin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_detail_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/medium_margin"
        android:layout_marginLeft="@dimen/small_margin"
        android:layout_marginStart="@dimen/small_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageview_detail_user"
                android:layout_width="0dp"
                android:layout_height="70dp"
                android:layout_weight="2"
                android:src="@drawable/placeholder_avatar"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview_item_service_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:text="@string/placeholder_services_name"
                    android:layout_marginLeft="@dimen/small_margin" />

                <RatingBar
                    android:id="@+id/ratingbar_detail_artisan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/small_margin"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    android:minHeight="15dp"
                    android:maxWidth="40dp"
                    android:numStars="5"
                    android:stepSize="0.1"
                    android:theme="@style/RatingBar"/>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textview_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:text="@string/placeholder_description"
            android:layout_marginLeft="@dimen/small_margin" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout_detail_2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginStart="@dimen/medium_margin"
            android:textSize="@dimen/not_so_huge_font_size"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/placeholder_detail_artisan"
            android:layout_marginLeft="@dimen/medium_margin" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_detail_service"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginLeft="@dimen/small_margin" />

    </LinearLayout>

</LinearLayout>